--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 spring.application.name=general
+
+# Configuración de la base de datos PostgreSQL
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/BanquitoCore?currentSchema=GENERAL
+spring.datasource.username=postgres
+spring.datasource.password=123
+
+# Hibernate y JPA
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.physical_naming_strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+# Configuración del schema
+spring.jpa.properties.hibernate.default_schema=GENERAL
+
+# Puerto del servidor
+server.port=8080
