Agg Service, Controller
Agregar los Servicios, Controladores, dtos, mapper de las tablas Estructura Geográfica, Feriado, Locación geográfica y Sucursal.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=general
 
 # Configuración de la base de datos PostgreSQL
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/BanquitoCore?currentSchema=GENERAL
+spring.datasource.url=jdbc:postgresql://localhost:5432/BanquitoCore?currentSchema=general
 spring.datasource.username=postgres
 spring.datasource.password=123
 
@@ -13,7 +13,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.physical_naming_strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 # Configuración del schema
-spring.jpa.properties.hibernate.default_schema=GENERAL
+spring.jpa.properties.hibernate.default_schema=general
 
 # Puerto del servidor
 server.port=8080
